# ftd_test

./: CMakeLists.txt  main.cpp  stockprices.cpp  test_file.cpp
stockprices/: EmailQuestions_VWAPer.hpp  stockprices.h
